--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -8,6 +8,7 @@
   bottom: 0;
   right: 0;
   left: 0;
+  overflow: auto;
 
   button {
     &:hover:not(:disabled):not(.disabled) {
@@ -34,16 +35,6 @@
   &:before{
     z-index: 1;
   }
-  &:after {
-    content: "";
-    border-bottom: solid 1px #777;
-    min-width: 100%;
-    width: var(--after-width, auto);
-    z-index: 1;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-  }
 
   .tab {
     display: flex;
@@ -55,6 +46,7 @@
     border-top: solid 1px #777;
     border-left: solid 1px #777;
     border-right: solid 1px #777;
+    border-bottom: solid 1px #777;
     width: fit-content;
     cursor: pointer;
     z-index: 0;
@@ -69,7 +61,7 @@
       background-color: #fff;
       color: #444;
       top: -1px;
-      height: 18px;
+      height: 17px;
       border-bottom: none;
       z-index: 2;
     }
