--- a/src/components/model/model-component.scss
+++ b/src/components/model/model-component.scss
@@ -6,7 +6,8 @@ $pluginMinWidth: 304px;
 }
 
 .model-header {
-  min-width: $pluginMinWidth;
+  border-top: solid 1px #777;
+  min-width: max(100%, var(--device-outputs-width, 0px));
 }
 .model-controls {
   background-color: rgba(0, 140, 186, 0.3);
@@ -312,6 +313,7 @@ $pluginMinWidth: 304px;
   margin: 0 10px 0 20px;
   gap: 40px;
   position: absolute;
+  width: auto;
 
   .device-column {
     position: relative;
@@ -321,7 +323,6 @@ $pluginMinWidth: 304px;
     align-items: center;
 
     &.centered {
-      justify-content: center;
       display: flex;
       flex-direction: column;
     }
